[gd_scene load_steps=11 format=3 uid="uid://v0tngypwklwl"]

[ext_resource type="Script" uid="uid://lmgwqnji7wqa" path="res://map_view.gd" id="1_7llvf"]
[ext_resource type="Script" uid="uid://l0ttsovrnqln" path="res://code_preview.gd" id="1_on2s6"]
[ext_resource type="Script" uid="uid://dr4j5322rn72y" path="res://CameraControll.gd" id="1_soy1o"]
[ext_resource type="Texture2D" uid="uid://bqnhx1vx66ft6" path="res://FLL Submerged imagem.webp" id="2_o5hwu"]
[ext_resource type="Script" uid="uid://csghwq5124kks" path="res://map_open_part.gd" id="2_on2s6"]
[ext_resource type="Script" uid="uid://d0d1rwjxx5434" path="res://mark_control_as_handled.gd" id="2_s3n85"]
[ext_resource type="Script" uid="uid://b8ivtppjxinvd" path="res://pathDrawerV1.gd" id="3_o5hwu"]
[ext_resource type="Script" uid="uid://c87l7hmr30at8" path="res://path_manager.gd" id="4_w5j0i"]
[ext_resource type="Script" uid="uid://d1012wo1r8jx2" path="res://tools.gd" id="5_g2q0j"]
[ext_resource type="Script" uid="uid://bcjqugw1hi8oi" path="res://custom_input_handler.gd" id="10_m2qfh"]

[node name="Map editor" type="Node2D"]

[node name="Map View UI" type="CanvasLayer" parent="."]

[node name="HSplitContainer" type="HSplitContainer" parent="Map View UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 865
drag_area_highlight_in_editor = true

[node name="map open part" type="Control" parent="Map View UI/HSplitContainer"]
layout_mode = 2
mouse_filter = 1

[node name="Container" type="Container" parent="Map View UI/HSplitContainer/map open part"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_on2s6")

[node name="grid" type="GridContainer" parent="Map View UI/HSplitContainer/map open part"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="Editor mode selector" type="TabBar" parent="Map View UI/HSplitContainer/map open part/grid"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
current_tab = 0
tab_count = 4
tab_0/title = "Map view"
tab_1/title = "Code view"
tab_2/title = "Viewport robot display"
tab_3/title = "Library editor"
script = ExtResource("2_s3n85")
metadata/_edit_use_anchors_ = true

[node name="text preview" type="Control" parent="Map View UI/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="TextEdit" type="TextEdit" parent="Map View UI/HSplitContainer/text preview"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
text = "Heyyy! That may work!"
script = ExtResource("1_on2s6")

[node name="robotCommand" type="Node" parent="."]

[node name="map_view" type="Node" parent="."]
script = ExtResource("1_7llvf")

[node name="MapViewCamera" type="Camera2D" parent="map_view"]
script = ExtResource("1_soy1o")

[node name="Map" type="Sprite2D" parent="map_view"]
texture = ExtResource("2_o5hwu")

[node name="Path drawer" type="Node2D" parent="map_view"]
script = ExtResource("3_o5hwu")

[node name="PathManager" type="Node" parent="map_view"]
script = ExtResource("4_w5j0i")

[node name="tools" type="Node" parent="map_view"]
script = ExtResource("5_g2q0j")

[node name="custom_input_handler" type="Node" parent="."]
script = ExtResource("10_m2qfh")
